--- a/MCInstaller.Console/MCInstaller.Console.csproj
+++ b/MCInstaller.Console/MCInstaller.Console.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MCInstaller.Core\MCInstaller.Core.csproj" />
     <ProjectReference Include="..\MCInstaller.Utilities\MCInstaller.Utilities.csproj" />
+    <ProjectReference Include="..\MCInstaller.Instances\MCInstaller.Instances.csproj" />
   </ItemGroup>
 
   <ItemGroup>
