--- a/MCInstaller.Console/MCInstaller.Console.csproj
+++ b/MCInstaller.Console/MCInstaller.Console.csproj
@@ -2,8 +2,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MCInstaller.Core\MCInstaller.Core.csproj" />
-    <ProjectReference Include="..\MCInstaller.Utilities\MCInstaller.Utilities.csproj" />
     <ProjectReference Include="..\MCInstaller.Instances\MCInstaller.Instances.csproj" />
+    <ProjectReference Include="..\MCInstaller.Java\MCInstaller.Java.csproj" />
+    <ProjectReference Include="..\MCInstaller.Jar\MCInstaller.Jar.csproj" />
   </ItemGroup>
 
   <ItemGroup>
