--- a/MCInstaller.Instances/MCInstaller.Instances.csproj
+++ b/MCInstaller.Instances/MCInstaller.Instances.csproj
@@ -12,7 +12,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MCInstaller.Core\MCInstaller.Core.csproj" />
-    <ProjectReference Include="..\MCInstaller.Utilities\MCInstaller.Utilities.csproj" />
+    <ProjectReference Include="..\MCInstaller.Jar\MCInstaller.Jar.csproj" />
+    <ProjectReference Include="..\MCInstaller.Java\MCInstaller.Java.csproj" />
   </ItemGroup>
 
 </Project>
